added a few more necessary options

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -8,6 +8,12 @@ executable = path/to/exe
 ; where to store data
 outdir = path/to/outdir
 
+; list of channel sets to process
+chansets = chansetA
+
+; whether to keep the scheduler alive while children run or not
+persist = True
+
 [robot cert]
 ; needed for ldr data discovery
 robot_certificate =
@@ -27,6 +33,10 @@ config = path/to/config.ini
 ; how to look up data
 lookup = ldr
 ldr-url-type = file
+ldr-server = ldr.ligo.caltech.edu
 
 ;lookup = shm
 ;shm-dir = /dev/shm/llhoft/
+
+; amount of time we spend looking for data before we give up and raise an error
+timeout = 60
