debugging and changing the example.ini to point to actual things. Testing is still ongoing, but it probably just works...

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -1,39 +1,68 @@
 [general]
 ; for uploads to GraceDB
-gracedb-url = https://gracedb.ligo.org/api
+gracedb-url = https://gracedb.ligo.org/api/
 
 ; what command to run
-executable = path/to/exe
+executable = /home/omega/opt/omega/bin/wpipeline
 
 ; where to store data
-outdir = path/to/outdir
+outdir = .
 
 ; list of channel sets to process
-chansets = chansetA
+chansets = l1_r h1_r
 
 ; whether to keep the scheduler alive while children run or not
 persist = True
+
+; a far threshold to limit which events we follow-up
+farThr = 1e-4
 
 [robot cert]
 ; needed for ldr data discovery
 robot_certificate =
 robot_key =
 
-[chansetA]
+;-------------------------------------------------
+
+[l1_r]
 ; information about his channel set
-ifo = H
-frame_type = llhoft
+ifo = L
+frame_type = L1_R
 
 ; the amount of time surrounding the gpstime of the trigger we need when discovering data
-win = 5.0
+win = 64.0
 
 ; config file for exe
-config = path/to/config.ini
+config = /home/detchar/etc/omega/O1/L-L1_R-selected.txt
 
 ; how to look up data
 lookup = ldr
 ldr-url-type = file
-ldr-server = ldr.ligo.caltech.edu
+;ldr-server = ldr.ligo.caltech.edu
+
+;lookup = shm
+;shm-dir = /dev/shm/llhoft/
+
+; amount of time we spend looking for data before we give up and raise an error
+timeout = 60
+
+;-------------------------------------------------
+
+[h1_r]
+; information about his channel set
+ifo = H
+frame_type = H1_R
+
+; the amount of time surrounding the gpstime of the trigger we need when discovering data
+win = 64.0
+
+; config file for exe
+config = /home/detchar/etc/omega/O1/H-H1_R-selected.txt
+
+; how to look up data
+lookup = ldr
+ldr-url-type = file
+;ldr-server = ldr.ligo.caltech.edu
 
 ;lookup = shm
 ;shm-dir = /dev/shm/llhoft/
