added submission through condor, although we do not currently support tracking of individual OmegaScan processes once they've been submitted to condor.

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -11,7 +11,11 @@ outdir = .
 ; list of channel sets to process
 chansets = l1_r h1_r
 
+; submit through condor, not on head node
+condor = True
+
 ; whether to keep the scheduler alive while children run or not
+; only used if we're (reporting to terminal or gracedb) and (not using condor)
 persist = True
 
 ; a far threshold to limit which events we follow-up
@@ -21,6 +25,11 @@ farThr = 1e-4
 ; needed for ldr data discovery
 robot_certificate =
 robot_key =
+
+[condor]
+universe = vanilla
+accounting_group = ligo.prod.o2.detchar.transient.omega.online
+accounting_group_user = reed.essick
 
 ;-------------------------------------------------
 
