updated url naming convention to automate link placement

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -6,7 +6,12 @@ gracedb-url = https://gracedb.ligo.org/api/
 executable = /home/omega/opt/omega/bin/wpipeline
 
 ; where to store data
+; local directory
 outdir = .
+
+; url which points to the local directory. 
+; Ensuring this matches outdir is the user's responsibility!
+outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/public_html/OmegaScan_scheduler/
 
 ; list of channel sets to process
 chansets = l1_r h1_r
