debugged /dev/shm dataFind functionality as well as Condor submission

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -7,14 +7,16 @@ executable = /home/omega/opt/omega/bin/wpipeline
 
 ; where to store data
 ; local directory
-outdir = .
+outdir = /home/reed.essick/OmegaScan_scheduler/test/
 
 ; url which points to the local directory. 
 ; Ensuring this matches outdir is the user's responsibility!
-outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/public_html/OmegaScan_scheduler/
+outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/OmegaScan_scheduler/test/
 
 ; list of channel sets to process
+;chansets = l1_llhoft h1_llhoft
 chansets = l1_r h1_r
+;chansets = l1_r h1_r l1_llhoft h1_llhoft
 
 ; submit through condor, not on head node
 condor = True
@@ -36,6 +38,38 @@ universe = vanilla
 accounting_group = ligo.prod.o2.detchar.transient.omega.online
 accounting_group_user = reed.essick
 
+retry = 0
+
+;-------------------------------------------------
+
+[l1_llhoft]
+ifo = L
+frame_type = L1_llhoft
+
+win = 64.0
+
+config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_llhoft.txt
+
+lookup = shm
+shm-dir = /dev/shm/llhoft/
+
+timeout = 60
+
+;-------------------------------------------------
+
+[h1_llhoft]
+ifo = H
+frame_type = H1_llhoft
+
+win = 64.0
+
+config = /home/reed.essick/OmegaScan_scheduler/test/H-H1_llhoft.txt
+
+lookup = shm
+shm-dir = /dev/shm/llhoft/
+
+timeout = 60
+
 ;-------------------------------------------------
 
 [l1_r]
@@ -47,7 +81,7 @@ frame_type = L1_R
 win = 64.0
 
 ; config file for exe
-config = /home/detchar/etc/omega/O1/L-L1_R-selected.txt
+config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_R-selected.txt
 
 ; how to look up data
 lookup = ldr
@@ -71,7 +105,7 @@ frame_type = H1_R
 win = 64.0
 
 ; config file for exe
-config = /home/detchar/etc/omega/O1/H-H1_R-selected.txt
+config = /home/reed.essick/OmegaScan_scheduler/test/H-H1_R-selected.txt
 
 ; how to look up data
 lookup = ldr
