--- a/etc/example.ini
+++ b/etc/example.ini
@@ -14,9 +14,7 @@ outdir = /home/reed.essick/OmegaScan_scheduler/test/
 outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/OmegaScan_scheduler/test/
 
 ; list of channel sets to process
-;chansets = l1_llhoft h1_llhoft
-chansets = l1_r h1_r
-;chansets = l1_r h1_r l1_llhoft h1_llhoft
+chansets = l1_r-ER9 h1_r l1_llhoft-ER9 h1_llhoft
 
 ; submit through condor, not on head node
 condor = True
@@ -42,13 +40,13 @@ retry = 0
 
 ;-------------------------------------------------
 
-[l1_llhoft]
+[l1_llhoft-ER9]
 ifo = L
 frame_type = L1_llhoft
 
 win = 64.0
 
-config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_llhoft.txt
+config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_llhoft-ER9.txt
 
 lookup = shm
 shm-dir = /dev/shm/llhoft/
