debugged actual operation under lvalert-run. Everything appears to work just fine.

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -14,7 +14,8 @@ outdir = /home/reed.essick/OmegaScan_scheduler/test/
 outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/OmegaScan_scheduler/test/
 
 ; list of channel sets to process
-chansets = l1_r-ER9 h1_r l1_llhoft-ER9 h1_llhoft
+;chansets = l1_r h1_r
+chansets = l1_r h1_r l1_llhoft-er9 h1_llhoft
 
 ; submit through condor, not on head node
 condor = True
@@ -40,7 +41,7 @@ retry = 0
 
 ;-------------------------------------------------
 
-[l1_llhoft-ER9]
+[l1_llhoft-er9]
 ifo = L
 frame_type = L1_llhoft
 
