--- a/etc/example.ini
+++ b/etc/example.ini
@@ -15,7 +15,7 @@ outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/OmegaScan_scheduler/tes
 
 ; list of channel sets to process
 ;chansets = l1_r h1_r
-chansets = l1_r h1_r l1_llhoft-er9 h1_llhoft
+chansets = l1_r h1_r 
 
 ; submit through condor, not on head node
 condor = True
@@ -33,41 +33,12 @@ robot_certificate =
 robot_key =
 
 [condor]
+; options for condor
 universe = vanilla
 accounting_group = ligo.prod.o2.detchar.transient.omega.online
 accounting_group_user = reed.essick
 
 retry = 0
-
-;-------------------------------------------------
-
-[l1_llhoft-er9]
-ifo = L
-frame_type = L1_llhoft
-
-win = 64.0
-
-config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_llhoft-ER9.txt
-
-lookup = shm
-shm-dir = /dev/shm/llhoft/
-
-timeout = 60
-
-;-------------------------------------------------
-
-[h1_llhoft]
-ifo = H
-frame_type = H1_llhoft
-
-win = 64.0
-
-config = /home/reed.essick/OmegaScan_scheduler/test/H-H1_llhoft.txt
-
-lookup = shm
-shm-dir = /dev/shm/llhoft/
-
-timeout = 60
 
 ;-------------------------------------------------
 
