added the ability to query multiple frame types within a single channel set. This is tested an appears to work, but it requires restructuring the scheduler's config file a bit. I'll have to do that by hand for the deployed versions

--- a/etc/example.ini
+++ b/etc/example.ini
@@ -14,18 +14,18 @@ outdir = /home/reed.essick/OmegaScan_scheduler/test/
 outurl = https://ldas-jobs.ligo.caltech.edu/~reed.essick/OmegaScan_scheduler/test/
 
 ; list of channel sets to process
-;chansets = l1_r h1_r
-chansets = l1_r h1_r 
+#chansets = l1_r-selected h1_r-selected 
+chansets = h1_r-selected 
 
 ; submit through condor, not on head node
-condor = True
+condor = False
 
 ; whether to keep the scheduler alive while children run or not
 ; only used if we're (reporting to terminal or gracedb) and (not using condor)
 persist = True
 
 ; a far threshold to limit which events we follow-up
-farThr = 1e-4
+farThr = 1e-1
 
 [robot cert]
 ; needed for ldr data discovery
@@ -41,18 +41,10 @@ accounting_group_user = reed.essick
 retry = 0
 
 ;-------------------------------------------------
+; Sections for Frame Types and Data Discovery
+;-------------------------------------------------
 
-[l1_r]
-; information about his channel set
-ifo = L
-frame_type = L1_R
-
-; the amount of time surrounding the gpstime of the trigger we need when discovering data
-win = 64.0
-
-; config file for exe
-config = /home/reed.essick/OmegaScan_scheduler/test/L-L1_R-selected.txt
-
+[L1_R]
 ; how to look up data
 lookup = ldr
 ldr-url-type = file
@@ -64,19 +56,7 @@ ldr-url-type = file
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 60
 
-;-------------------------------------------------
-
-[h1_r]
-; information about his channel set
-ifo = H
-frame_type = H1_R
-
-; the amount of time surrounding the gpstime of the trigger we need when discovering data
-win = 64.0
-
-; config file for exe
-config = /home/reed.essick/OmegaScan_scheduler/test/H-H1_R-selected.txt
-
+[H1_R]
 ; how to look up data
 lookup = ldr
 ldr-url-type = file
@@ -84,6 +64,47 @@ ldr-url-type = file
 
 ;lookup = shm
 ;shm-dir = /dev/shm/llhoft/
+
+; amount of time we spend looking for data before we give up and raise an error
+timeout = 60
+
+[L1_HOFT_C00]
+lookup = ldr
+ldr-url-type = file
+
+timeout = 60
+
+[H1_HOFT_C00]
+lookup = ldr
+ldr-url-type = file
+
+timeout = 60
+
+;-------------------------------------------------
+; Sections for Channel Sets
+;-------------------------------------------------
+
+[l1_r-selected]
+; information about his channel set
+ifo = L
+
+; the amount of time surrounding the gpstime of the trigger we need when discovering data
+win = 64.0
+
+; config file for exe
+config = etc/L-L1_R-selected.txt
+
+;-------------------------------------------------
+
+[h1_r-selected]
+; information about his channel set
+ifo = H
+
+; the amount of time surrounding the gpstime of the trigger we need when discovering data
+win = 64.0
+
+; config file for exe
+config = etc/H-H1_R-selected.txt
 
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 60
