fixed a typo with output url

--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -11,7 +11,7 @@ outdir = /home/detchar/public_html/events/
 
 ; url which points to the local directory. 
 ; Ensuring this matches outdir is the user's responsibility!
-outurl = https://ldas-jobs.ligo-la.caltech.edu/~detchar/events/
+outurl = https://ldas-jobs.ligo-wa.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
 chansets = h1_llhoft h1_reduced h1_r-selected
