removed "reduced" chansets from production config files

--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo-wa.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = h1_llhoft h1_reduced h1_r-selected
+chansets = h1_llhoft h1_r-selected
 
 ; submit through condor, not on head node
 condor = True
