--- a/etc/ER10-prod-la_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-la_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo-la.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = l1_llhoft l1_reduced l1_r-selected
+chansets = l1_llhoft l1_r-selected
 
 ; submit through condor, not on head node
 condor = True
