added in external triggers to lvalert configs

--- a/etc/ER10-prod-wa_lvalert-OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_lvalert-OmegaScanScheduler.ini
@@ -39,3 +39,12 @@ executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-wa_l
 
 [test_lib]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-wa_lvalert-run_omegaScanScheduler
+
+[external_swift]
+executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
+
+[external_fermi]
+executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
+
+[external_snews]
+executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
