updated ligo-channel-lists submodule and modified production Scheduler configs to point to OmegaScan configs automatically generated by "make", which descends into ligo-channel-lists and builds configs based on the INI files therein. This includes re-instating the "reduced" channel sets

--- a/etc/ER10-prod-la_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-la_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo-la.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = l1_llhoft l1_r-selected
+chansets = l1_llhoft l1_r-reduced l1_r-selected
 
 ; submit through condor, not on head node
 condor = True
@@ -86,7 +86,7 @@ ifo = L
 ; the amount of time surrounding the gpstime of the trigger we need when discovering data
 win = 64.0
 ; config file for exe
-config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L-L1_R-selected.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L1-O2-standard_omegascan.txt
 
 ;-------------------------------------------------
 
@@ -96,33 +96,33 @@ ifo = H
 ; the amount of time surrounding the gpstime of the trigger we need when discovering data
 win = 64.0
 ; config file for exe
-config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/H-H1_R-selected.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/H1-O2-standard_omegascan.txt
 
 ;-------------------------------------------------
 
-[l1_reduced]
+[l1_r-reduced]
 ifo = L
 win = 64.0
-config = /home/detchar/etc/omega/O2/L-L1_R-reduced.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L1-O2-reduced_omegascan.txt
 
 
 ;-------------------------------------------------
 
-[h1_reduced]
+[h1_r-reduced]
 ifo = H
 win = 64.0
-config = /home/detchar/etc/omega/O2/H-H1_R-reduced.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/H1-O2-reduced_omegascan.txt
 
 ;-------------------------------------------------
 
 [l1_llhoft]
 ifo = L
 win = 64.0
-config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L-L1_llhoft.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L1-O2-llhoft_omegascan.txt
 
 ;-------------------------------------------------
 
 [h1_llhoft]
 ifo = H
 win = 64.0
-config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/H-H1_llhoft.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L1-O2-llhoft_omegascan.txt
