added a command to automatically change all HOFT_C00 frame types to the corresponding llhoft within config files. Also updated OmegaScanScheduler.ini files to lookup llhoft through gw_data_find rather than /dev/shm

--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo-wa.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = h1_llhoft h1_r-reduced h1_r-selected
+chansets = h1_llhoft h1_r-reduced h1_r-standard
 
 ; submit through condor, not on head node
 condor = True
@@ -56,31 +56,25 @@ ldr-url-type = file
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 60
 
-[L1_HOFT_C00]
-lookup = ldr
-ldr-url-type = file
-timeout = 60
-
-[H1_HOFT_C00]
-lookup = ldr
-ldr-url-type = file
-timeout = 60
-
 [L1_llhoft]
-lookup = shm
-shm-dir = /dev/shm/llhoft/
+lookup = ldr
+ldr-url-type = file
+#lookup = shm
+#shm-dir = /dev/shm/llhoft/
 timeout = 60
 
 [H1_llhoft]
-lookup = shm
-shm-dir = /dev/shm/llhoft/
+lookup = ldr
+ldr-url-type = file
+;lookup = shm
+;shm-dir = /dev/shm/llhoft/
 timeout = 60
 
 ;-------------------------------------------------
 ; Sections for Channel Sets
 ;-------------------------------------------------
 
-[l1_r-selected]
+[l1_r-standard]
 ; information about his channel set
 ifo = L
 ; the amount of time surrounding the gpstime of the trigger we need when discovering data
@@ -90,7 +84,7 @@ config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/L1-O2-standard_ome
 
 ;-------------------------------------------------
 
-[h1_r-selected]
+[h1_r-standard]
 ; information about his channel set
 ifo = H
 ; the amount of time surrounding the gpstime of the trigger we need when discovering data
