--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -44,28 +44,28 @@ retry = 0
 
 [L1_R]
 ; how to look up data
-lookup = ldr
-ldr-url-type = file
+lookup  = arx
+arx-dir = /hdfs/frames/ER10/raw/
+;lookup = ldr
+;ldr-url-type = file
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 600
 
 [H1_R]
 ; how to look up data
-lookup = ldr
-ldr-url-type = file
+lookup  = arx
+arx-dir = /hdfs/frames/ER10/raw/
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 600
 
 [L1_llhoft]
-lookup = ldr
-ldr-url-type = file
-#lookup = shm
-#shm-dir = /dev/shm/llhoft/
+lookup  = arx
+arx-dir = /scratch/llcache/llhoft/
 timeout = 600
 
 [H1_llhoft]
-lookup = ldr
-ldr-url-type = file
+lookup  = arx
+arx-dir = /scratch/llcache/llhoft/
 ;lookup = shm
 ;shm-dir = /dev/shm/llhoft/
 timeout = 600
