--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -45,7 +45,7 @@ retry = 0
 [L1_R]
 ; how to look up data
 lookup  = arx
-arx-dir = /hdfs/frames/ER10/raw/
+arx-dir = /scratch/frames/cache/L0/
 ;lookup = ldr
 ;ldr-url-type = file
 ; amount of time we spend looking for data before we give up and raise an error
@@ -54,7 +54,7 @@ timeout = 600
 [H1_R]
 ; how to look up data
 lookup  = arx
-arx-dir = /hdfs/frames/ER10/raw/
+arx-dir = /scratch/frames/cache/L0/
 ; amount of time we spend looking for data before we give up and raise an error
 timeout = 600
 
