changed subscriptions so they include burst_cwb_allskylong

--- a/etc/ER10-prod-la_lvalert-OmegaScanScheduler.ini
+++ b/etc/ER10-prod-la_lvalert-OmegaScanScheduler.ini
@@ -28,10 +28,10 @@ executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_l
 [test_gstlal-spiir]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
 
-[burst_cwb_allsky]
+[burst_cwb]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
 
-[test_cwb_allsky]
+[test_cwb]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/ER10-prod-la_lvalert-run_omegaScanScheduler
 
 [burst_lib]
