--- a/etc/ER10-prod-wa_OmegaScanScheduler.ini
+++ b/etc/ER10-prod-wa_OmegaScanScheduler.ini
@@ -26,6 +26,9 @@ persist = True
 ; a far threshold to limit which events we follow-up
 farThr = 1e-1
 
+; colormap for plots
+colormap = parula
+
 [robot cert]
 ; needed for ldr data discovery
 robot_certificate = /home/detchar/.globus/detcharcert.pem
