modified INI to correct directions to find V1 llhoft data

--- a/etc/O2b-prod_OmegaScanScheduler.ini
+++ b/etc/O2b-prod_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = h1_llhoft l1_llhoft v1online
+chansets = h1_llhoft l1_llhoft v1_llhoft
 
 ; submit through condor, not on head node
 condor = True
@@ -63,19 +63,19 @@ timeout = 600
 
 [L1_llhoft]
 lookup  = arx
-arx-dir = /scratch/llcache/llhoft/
+arx-dir = /ifocache/llcache/llhoft/
 timeout = 600
 
 [H1_llhoft]
 lookup  = arx
-arx-dir = /scratch/llcache/llhoft/
+arx-dir = /ifocache/llcache/llhoft/
 ;lookup = shm
 ;shm-dir = /dev/shm/llhoft/
 timeout = 600
 
-[V1Online]
+[V1_llhoft]
 lookup = arx
-arx-dir = /scratch/llcache/llhoft/
+arx-dir = /ifocache/llcache/llhoft/
 timeout = 600
 
 ;-------------------------------------------------
@@ -94,6 +94,6 @@ config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/H1-O2-llhoft_omega
 
 ;-------------------------------------------------
 
-[v1online]
+[v1_llhoft]
 ifo = V
-config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/V-V1Online.txt
+config = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/etc/V1-O2-llhoft_omegascan.txt
