re-arranged the order in which chansets are processed

--- a/etc/O2b-prod_OmegaScanScheduler.ini
+++ b/etc/O2b-prod_OmegaScanScheduler.ini
@@ -14,7 +14,7 @@ outdir = /home/detchar/public_html/events/
 outurl = https://ldas-jobs.ligo.caltech.edu/~detchar/events/
 
 ; list of channel sets to process
-chansets = h1_llhoft l1_llhoft v1_llhoft
+chansets = l1_llhoft h1_llhoft v1_llhoft
 
 ; submit through condor, not on head node
 condor = True
