updated lvalert config files to respond to cbc_gstlal_o2virgotest

--- a/etc/O2b-prod_lvalert-OmegaScanScheduler.ini
+++ b/etc/O2b-prod_lvalert-OmegaScanScheduler.ini
@@ -10,6 +10,9 @@ executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/O2b-prod_lvale
 [test_gstlal_highmass]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/O2b-prod_lvalert-run_omegaScanScheduler
 
+[cbc_gstlal_o2virgotest]
+executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/O2b-prod_lvalert-run_omegaScanScheduler
+
 [cbc_mbtaonline]
 executable = /home/detchar/opt/triggeredDQ/OmegaScanScheduler/bin/O2b-prod_lvalert-run_omegaScanScheduler
 
